

2020-11-10 Franz Holzinger <franz@ttproducts.de>
    * bugfix: The SQL query logger params must be shown correctly also for UPDATE and INSERT
    * bugfix: The detection of tables out of a SQL query will give better results
    * new feature: Use the install tool configurations with table limits also for the SQL query logger.

2020-09-02 Franz Holzinger <franz@ttproducts.de>
    * bugfix: the SQL query logger params must be checked for the type array.

2020-08-12 Franz Holzinger <franz@ttproducts.de>
    * bugfix for TYPO3 8.7. There can exist a case when the logger has not been set.

2020-07-18  Franz Holzinger  <franz@ttproducts.de>
    * new feature: The FileWriter Logger must store the previous SQL query. Because if an exception happens, then the SQL query by the exception will be written and the formerly interrupted SQL query would be lost.
    * new feature: expand the SQL queries also with question marks as placeholders
    * new feature: debugUtilityErrors only for the debugUtility class of TYPO3. Turning this off should help to avoid an output by TYPO3 which causes Ajax errors.

2020-07-11  Franz Holzinger  <franz@ttproducts.de>
    * new feature for TYPO3 9.5: Add a SQL Query Logger and its FileWriter class which also supports the debug method.

2020-02-23  Franz Holzinger  <franz@ttproducts.de>
    * bugfix for TYPO3 9.5: Wrong class name Typo3DbLegacyDatabaseConnection. Use Typo3DbLegacyConnection instead.

2020-02-20  Franz Holzinger  <franz@ttproducts.de>
    * bugfix for TYPO3 8.7: The old style TYPO3_DB based functions did not get debugged.

2020-01-25  Franz Holzinger  <franz@ttproducts.de>
    * new feature: debug output for Doctrine method executeQuery

2020-01-24  Franz Holzinger  <franz@ttproducts.de>

    * new feature: support for Doctrine

2020-01-03  Franz Holzinger  <franz@ttproducts.de>

    * bugfix: the initialization must be done in the method initialize and not in the constructor __construct.
